@@ -868,10 +868,13 @@ proc test32 {} {
 	    return
 	}
     }
-    if { [expr "$mod_date + $pw_max_life - $pw_expire"] > 5 } {
-	fail "$test: pw_expire is wrong"
+    if { $pw_expire != 0 } {
+	fail "$test: pw_expire $pw_expire should be 0"
 	return
+    } else {
+	pass "$test" 
     }
+
     if { ! [cmd {ovsec_kadm_destroy $server_handle}]} {
 	error "$test: unexpected failure in destroy"
 	return
@@ -1090,10 +1093,13 @@ proc test36 {} {
 	    return
 	}
     }
-    if { [expr "$mod_date + $pw_max_life - $pw_expire"] > 5 } {
-	fail "$test: pw_expire is wrong"
+    if { $pw_expire != 999999999 } {
+	fail "$test: pw_expire $pw_expire should be 999999999"
 	return
+    } else {
+	pass "$test"
     }
+
     if { ! [cmd {ovsec_kadm_destroy $server_handle}]} {
 	error "$test: unexpected failure in destroy"
 	return
