@@ -14,25 +14,42 @@ if {[info exists exp_version_4]} {
 	set wait_status_index 3
 }
 
+# Variables for keeping track of api process state
+set api_pid "0"
+
 proc api_exit {} {
 	global spawn_id
+        global api_pid
 
 #	puts stdout "Starting api_exit (spawn_id $spawn_id)."
 	catch {close} errMsg
         catch {wait} errMsg
-#	puts stdout "Finishing api_exit."
+        puts stdout "Finishing api_exit for $api_pid."
+        set api_pid "0"
+}
+
+proc api_isrunning {pid} {
+        global api_pid
+    
+#        puts stdout "testing $pid, api_pid is $api_pid"
+        if {$pid == $api_pid} {
+	    return 1;
+	} else {
+	    return 0;
+	}
 }
 
 proc api_version {} {
 }
 
 proc api_start {} {
-	global API
+	global API 
 	global env
 	global spawn_id
 	global prompt
+        global api_pid
 
-	spawn $API
+	set pid [spawn $API]
 	expect {
 		-re "$prompt$" {}
 		eof { error "EOF starting API" }
@@ -107,7 +124,10 @@ proc api_start {} {
 		eof { error "EOF setting API varibles"}
 		timeout { error "timeout setting API varibles"}
 	}
-#	puts stdout "Finishing api_start (spawn_id $spawn_id)."
+
+	set api_pid $pid
+	puts stdout "Finishing api_start (spawn_id $spawn_id, pid $api_pid)."
+	return $pid
 }
 api_start
 
